# hello_world

./: Cargo.toml
src/: main.rs
tmpls/: dashboard.mustache.html
